dimagi-SalesforceFB/src/objects/FogBugz_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Default_Opportunity_Owner__c</fullName>
        <inlineHelpText>This is the User Name (not Email address) to be the detault Salesforce Opportunity Owner when a user without a Salesforce account creates a biz dev ticket in Fogbugz.</inlineHelpText>
        <label>Default Opportunity Owner</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Error_Email__c</fullName>
        <label>Error Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Last_Time_Sync_Ran__c</fullName>
        <label>Last Time Sync Ran</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sync_Filter__c</fullName>
        <label>Sync Filter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sync_Script_Running__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync Script Running</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <label>Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FogBugz Settings</label>
</CustomObject>